# lithtech

./: .gitignore  .gitmodules  CMakeLists.txt  RDLL PORTING.TXT  README.MD  vcpkg.json
engine/render_dx9/: 3d_ops.cpp  CMakeLists.txt  LTEffectImpl.cpp  LTEffectInclude.cpp  LTShaderDeviceStateImp.cpp  VertexBufferController.cpp  common_draw.cpp  common_draw.h  common_init.cpp  common_stuff.cpp  common_stuff.h  d3d_device.cpp  d3d_device.h  d3d_draw.cpp  d3d_draw.h  d3d_drawsky.cpp  d3d_init.cpp  d3d_optimizedsurface.cpp  d3d_renderblock.cpp  d3d_renderblock.h  d3d_rendershader_base.h  d3d_rendershader_gouraud.cpp  d3d_rendershader_gouraud_fullbright.cpp  d3d_rendershader_lightmap.cpp  d3d_renderstyle.cpp  d3d_renderstyleinterface.cpp  d3d_renderstyleinterface.h  d3d_renderworld_occluder.cpp  d3d_shell.cpp  d3d_surface.cpp  d3d_surface.h  d3d_texture.cpp  d3d_texture.h  d3d_utils.cpp  d3d_utils.h  d3dddstructs.h  d3ddrawprim.cpp  d3ddrawprim.h  d3dmeshrendobj_skel.cpp  d3dmeshrendobj_vertanim.cpp  (+28 more)
engine/render_dx9/shadows/: d3dshadowtexture.cpp
engine/render_null/: CMakeLists.txt  nullrender.cpp  nullrender.rc
engine/runtime/: CMakeLists.txt  Client.cmake  Server.cmake
engine/runtime/client/: client_filemgr.cpp  client_formatmgr.cpp  client_iltcommon.cpp  client_iltmodel.cpp  client_iltphysics.cpp  client_iltvideomgr.cpp  clientde_impl.cpp  clientmgr.cpp  clientmgr.h  clientshell.cpp  cloaderthread.h  cnet.cpp  console.cpp  console.h  consolecommands.cpp  cutil.cpp  ltmessage_client.cpp  particlesystem.cpp  predict.cpp  setupobject.cpp  setupobject.h  shellnet.cpp  sprite.cpp  volumeeffect.cpp  world_client_bsp.cpp
engine/runtime/model/: animtracker.cpp  model.cpp  model.h  model_load.cpp
engine/runtime/physics/: aabb.cpp  build_aabb.cpp  obb.cpp
engine/runtime/render/: iltrender.cpp
engine/runtime/server/: classmgr.cpp  game_serialize.cpp  s_client.cpp  s_net.cpp  s_object.cpp  server_extradata.cpp  server_iltcommon.cpp  serverde_impl.cpp  servermgr.cpp  sloaderthread.h  smoveabstract.cpp
engine/runtime/shared/: bdefs.h  debuggeometry.cpp  debuggeometry.h  dtxmgr.cpp  ftclient.cpp  impl_common.cpp  interface_linkage.cpp  leech.cpp  ltdllfactory.cpp  ltdllfactory.h  objectmgr.cpp  objectmgr.h  pixelformat.cpp  pixelformat.h  renderstruct.h  shared_iltcommon.cpp  stacktrace.h  stdlterror.h
engine/runtime/sound/: iltsound.cpp  soundbuffer.cpp  soundbuffer.h  soundinstance.cpp  soundinstance.h  soundmgr.cpp  soundmgr.h  wave.h
engine/runtime/ui/: cuivectorfont.cpp
engine/runtime/world/: de_mainworld.cpp  de_objects.h  de_world.h  light_table.h  sharedtexture.h  world_server.h
engine/sound_dx8/: CMakeLists.txt  StdAfx.h  d3dsound.rc  resource.h  s_dx8.cpp  s_dx8.h
engine/sound_null/: CMakeLists.txt  nullsound.rc  resource.h  s_nul.cpp
libs/: CMakeLists.txt
libs/ButeMgr/: CMakeLists.txt  butemgr.cpp  butemgr.h  stdafx.h
libs/CryptMgr/: CMakeLists.txt
libs/RegMgr/: CMakeLists.txt
libs/RegMgr32/: CMakeLists.txt  STDAFX.H  regmgr32.h
libs/StackTracer/: CMakeLists.txt
libs/aegis/: CMakeLists.txt  tdguard.cpp
libs/dibmgr/: CMakeLists.txt  dib.cpp  dib.h  dibpal.cpp
libs/dtxmgr/: CMakeLists.txt  TextureProp.cpp  TextureProp.h  dtxmgr.cpp  dtxmgr.h  dtxmgr_lib.cpp  s3tc_compress.cpp  s3tc_compress.h
libs/genregmgr/: CMakeLists.txt  genregmgr.h
libs/lith/: CMakeLists.txt
libs/ltamgr/: CMakeLists.txt  ltahuffmantree.cpp
libs/ltmem/: CMakeLists.txt  ltmem.cpp  ltmemstats.cpp  ltmemtrack.cpp  stdafx.h
libs/lttool/: CMakeLists.txt
libs/lttool/engine/: bdefs.cpp  (+9 more)
libs/rezmgr/: CMakeLists.txt  rezutils.cpp
libs/s3tc/: CMakeLists.txt  s3tc.cpp
libs/stdlith/: CMakeLists.txt  stdafx.h
sdk/inc/: CMakeLists.txt  iltcamera.h  iltclientfilemgr.h  iltdynamiclight.h  ilteffectshadermgr.h  iltobject.h  iltparticlesystem.h  iltpixelshadermgr.h  iltrender.h  iltrendertargetmgr.h  iltsound.h  iltsoundmgr.h  iltstream.h  ilttexture.h  iltvertexshadermgr.h  iltvolumeeffect.h  iltworldclient.h  iltworldclientbsp.h  ithread.h  ltattachment.h  ltbasedefs.h  ltbasetypes.h  ltcrashhandler.cpp  lthread.cpp  lthread.h  ltmem.h  ltpformat.cpp  ltpformat.h  ltpixelformat.cpp  ltpixelformat.h  ltplane.h  ltpvalue.h  ltrenderstruct.h  ltresources.h  ltsysnode.h  sharedtexture.h  strtools.cpp
tools/: CMakeLists.txt
tools/ButeEdit/: CMakeLists.txt
tools/DEdit/: AllTextureDlg.cpp  CMakeLists.txt  EditBrush.cpp  TextureDlg.cpp  WorldNode.h
tools/DtxOptimizer/: CMakeLists.txt
tools/DtxShellEx/: CMakeLists.txt  DtxShellExApp.cpp
tools/DtxView/: CMakeLists.txt  DtxView.cpp
tools/FxED/: CMakeLists.txt
tools/HeightMaptoNormalMap/: CMakeLists.txt  HeightMaptoNormalMap.vcproj
tools/LTAsk/: CMakeLists.txt
tools/LTC/: CMakeLists.txt  main.cpp
tools/LithRez/: CMakeLists.txt
tools/ModelEdit/: CMakeLists.txt  KeyframeWnd.cpp  PieceLODGen.cpp  PieceMaterialDlg.cpp  StdAfx.h  model_cleanup.cpp
tools/Model_Packer/: CMakeLists.txt  lta2ltb_d3d.cpp  lta2ltb_ps2.cpp  manifold.cpp  stripify.cpp
tools/PreProcessor/: BrushToWorld.cpp  CMakeLists.txt  Processing.cpp  StdAfx.h
tools/PropHelpGen/: CMakeLists.txt  PropHelpGen.cpp
tools/RenderStyle_Packer/: CMakeLists.txt  RenderStyle_LTA_Loader.cpp  d3d_renderstyle.cpp  d3d_renderstyle.h  ps2renderstyle.cpp  ps2renderstyle.h  renderstylepacker.cpp  stdafx.h
tools/RenderStylesEditor/: CMakeLists.txt  RenderPassDlg.cpp  RenderStyle_LTA.cpp  RenderStylesEditor.cpp  VertexShaderDlg.h  d3d_shell.cpp  d3dmeshrendobj_rigid.cpp  d3dmeshrendobj_skel.cpp  dtx_files.cpp  dtx_files.h  stdafx.h
tools/SetVersionCode/: CMakeLists.txt  SetVersionCode.vcproj
tools/TSCompiler/: CMakeLists.txt  TextureScriptCompiler.cpp  main.cpp
tools/WaveEdit/: CMakeLists.txt
tools/WinLTC/: CMakeLists.txt  WinLTC.vcproj
tools/dtxutil/: CMakeLists.txt  dtxutil.cpp  main.cpp
tools/lipcompiler/: CMakeLists.txt
tools/ltaview/: CMakeLists.txt
tools/ltbhead/: CMakeLists.txt
tools/ltdmtest/: CMakeLists.txt
tools/pma/: CMakeLists.txt  pma.vcproj
tools/recurse_run/: CMakeLists.txt
tools/winpacker/: CMakeLists.txt  StdAfx.h
(+96 files in other folders)
