add_subdirectory(lith)
add_subdirectory(stdlith)
add_subdirectory(CryptMgr)
add_subdirectory(ButeMgr)
add_subdirectory(rezmgr)
add_subdirectory(ltamgr)
add_subdirectory(ltmem)
add_subdirectory(dibmgr)
add_subdirectory(dtxmgr)
add_subdirectory(s3tc)
add_subdirectory(aegis)
add_subdirectory(lttool)
add_subdirectory(genregmgr)

if (WIN32)
    add_subdirectory(RegMgr32)
    add_subdirectory(RegMgr)
endif()
