add_subdirectory(dtxutil)
add_subdirectory(WinLTC)
add_subdirectory(winpacker)
add_subdirectory(DtxView)
add_subdirectory(LithRez)
add_subdirectory(ltaview)
add_subdirectory(WaveEdit)
add_subdirectory(TSCompiler)
add_subdirectory(PreProcessor)
add_subdirectory(RenderStylesEditor)
add_subdirectory(RenderStyle_Packer)
add_subdirectory(recurse_run)
add_subdirectory(PropHelpGen)
add_subdirectory(pma)
add_subdirectory(ModelEdit)
add_subdirectory(Model_Packer)
add_subdirectory(ltbhead)
add_subdirectory(LTC)
add_subdirectory(lipcompiler)
add_subdirectory(DEdit)
add_subdirectory(ButeEdit)
add_subdirectory(FxED)
add_subdirectory(heightMaptoNormalMap)
add_subdirectory(LTAsk)
add_subdirectory(SetVersionCode)
add_subdirectory(DtxShellEx)

if (USE_DIRECTMUSIC)
    add_subdirectory(ltdmtest)
endif()
