macro(dsrc DIR)
    file(GLOB ${DIR}_SRC "${DIR}/*.cpp" "${DIR}/*.h" "${DIR}/*.rc")
    source_group("${DIR}" FILES ${${DIR}_SRC})
    list(APPEND DEDIT_SRC ${${DIR}_SRC})
    list(APPEND DEDIT_INC ${DIR})
endmacro()

file(GLOB SRC "*.h" "*.cpp" "*.rc" "*.ico")
source_group("" FILES ${SRC})
set(DEDIT_SRC ${SRC})
set(DEDIT_INC .)
dsrc(Controls)
dsrc(Dlgs)
dsrc(draw)
dsrc(Docs)
dsrc(FileFormats)
dsrc(Frames)
dsrc(KeyAggregate)
dsrc(LevelError)
dsrc(Lightmap)
dsrc(Misc)
dsrc(ModelView)
dsrc(MRCEXT)
dsrc(Options)
dsrc(Project)
dsrc(RegionEdit)
dsrc(Trackers)
dsrc(Views)

add_executable(DEdit WIN32 ${DEDIT_SRC})
set_target_properties(DEdit PROPERTIES FOLDER "tools")
target_link_libraries(DEdit PRIVATE ltsdk stdlith lttools ButeMgr genregmgr RegMgr)
target_precompile_headers(DEdit PRIVATE StdAfx.h)
target_include_directories(DEdit PRIVATE ${DEDIT_INC})
